# fedstate_han

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  id_rsa  pyproject.toml  tox.ini  visualize.py
analysis/: test.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
han_scripts/: main.py  main.sh
output/convergence_results/20-10-10-32-0.1-Balance/: predicted_GNS.npy
output/convergence_results/20-10-10-32-0.2-Balance/: predicted_GNS.npy
output/convergence_results/20-10-10-32-0.5-Balance/: predicted_GNS.npy
output/convergence_results/20-10-10-32-1-Balance/: predicted_GNS.npy
scripts/: balance.sh  env  hybrid.sh  hybrid2.sh  run_fedsate.sh  run_in_singularity.sh  submit_pbs.sh  submit_pbs_hybrid.sh  submit_task1.sh  submit_task2.sh  submit_task3.sh  task1.sh  task2.sh  task3.sh  task4.sh
src/: actor.py  critic.py  fedsate_distributor.py  main.py  main_data_sharing.py  main_fedprox.py  main_hybrid_training.py  run.sh  submit.sh  test.py
src/StarlinkDataForFL/: Distributor.py  StarlinkData.py  main.py
src/StarlinkDataForFL/Functions/: SPInOneShell.py  SPOnGrid.py  loop_grid_pathform.py
src/basic/: CNNbasic.py  ViTbasic.py  __init__.py  cli.py  utils.py
src/convergence_results/10-10-10-32-0.1-Balance/: error.txt  output.txt
src/convergence_results/10-10-10-32-0.1-FedAvg/: error.txt  output.txt
src/convergence_results/10-10-10-32-1-Balance/: error.txt  output.txt
src/preprocess/: preConfig.py
src/utils/: utils.py
tests/: __init__.py  test_fedsate.py
(+10 files in other folders)
