[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fedsate"
version = "0.1.0"
description = "Towards Distributed Machine Learning  Across Large-Scale Satellite Constellations"
readme = "README.rst"
authors = [
  {name = "Yizhan Han", email = "hyz0235@gmail.com"}
]
maintainers = [
  {name = "Yizhan Han", email = "hyz0235@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/hyizhak/fedsate/issues"
changelog = "https://github.com/hyizhak/fedsate/blob/master/changelog.md"
homepage = "https://github.com/hyizhak/fedsate"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

